# DecompGTI

./: .gitignore  .pre-commit-config.yaml  DATA_GENERATION.md  README.md  cloud_benchmark_decompgti (1) copy.ipynb  cloud_benchmark_decompgti (1).ipynb  debug_template.json  eval_log.txt  print_template.py  pyproject.toml  run_groq_baseline.sh  test_infer.py  walkthrough.md.resolved
GraphInstruct/LLaMAFactory/: =0.39.0
GraphInstruct/LLaMAFactory/data/: dataset_info.json
GraphInstruct/script/: csv2json.py  generation.py  run_all_generation.sh
configs/: llama3_8b.yaml  qwen2.5_1.5b.yaml  qwen2.5_7b.yaml
data/: test_set_large.json  test_set_medium.json  test_set_mini.json  test_set_small.json
data/old_data/: test_set_large.json  test_set_medium.json  test_set_mini.json  test_set_small.json
docs/: architecture.md  evaluation.md  training.md
evaluation/: __init__.py  benchmarks.py  metrics.py
evaluation/results/: analyze_bug.py  analyze_bug2.py
evaluation/results/llama3_8b_v3_imm/: eval_log_llama3.txt
evaluation/results/qwen7b-v1/: mini_predictions.json  mini_results.json  small_predictions.json  small_results.json
evaluation/results/qwen7b_v3/: medium_predictions.json  medium_results.json  mini_results.json  (+4 more)
proposal/: DecompGTI.tex
scripts/: compare_baselines.py  demo_roundtrip.py  evaluate.py  fix_training_params.py  inference_e2e.py  large_graph.py
src/decompgti/: __init__.py
tests/: test_graph_tools.py  test_pipeline_integration.py  test_routing.py
training/: README.md  csv2json.py  data_format_example.json  training_config.yaml
web/: app.py
(+75 files in other folders)
