[project]
name = "decompgti"
version = "0.1.0"
description = "DecompGTI"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mcp>=1.10.0",
    "networkx>=3.4.2",
    "pydantic>=2.10.6",
]

[project.scripts]
decompgti-mcp-server = "decompgti.mcp_server.server:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "types-pyyaml>=6.0.12.20241230",
]
dl = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true
